[bumpversion]
current_version = 0.1.0
commit = False
tag = False

[bumpversion:file:holoforce/__init__.py]

[metadata]
name = holoforce
version = attr: holoforce.__version__
author = Gregor Thalhammer
author_email = gregor.thalhammer@i-med.ac.at
description = holoforce is an open-source software for holographic force measurements with optical tweezers
long_description = file: README.md, LICENSE
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/geggo/holographic-force-measurements
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires = 
packages = find:

[options.package_data]
holoforce = *.cl

